// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar (default props) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#2f3241",
      "flex": 1,
      "padding": 5,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#02ffff",
        "borderRadius": 2,
        "flex": 1,
        "padding": 2,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#2f3241",
          "borderRadius": 2,
          "flex": 1,
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgba(2, 255, 255, 1)",
            "borderRadius": 2,
            "flex": 1,
            "height": "100%",
            "position": "absolute",
            "width": "NaN%",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "elevation": 6,
            "flexDirection": "row",
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`ProgressBar (with children) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#2f3241",
      "flex": 1,
      "padding": 5,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#02ffff",
        "borderRadius": 2,
        "flex": 1,
        "padding": 2,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#2f3241",
          "borderRadius": 2,
          "flex": 1,
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgba(2, 255, 255, 1)",
            "borderRadius": 2,
            "flex": 1,
            "height": "100%",
            "position": "absolute",
            "width": "NaN%",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "elevation": 6,
            "flexDirection": "row",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          foo
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`ProgressBar (with progress and children) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#2f3241",
      "flex": 1,
      "padding": 5,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#02ffff",
        "borderRadius": 2,
        "flex": 1,
        "padding": 2,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#2f3241",
          "borderRadius": 2,
          "flex": 1,
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgba(2, 255, 255, 1)",
            "borderRadius": 2,
            "flex": 1,
            "height": "100%",
            "position": "absolute",
            "width": "50%",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "elevation": 6,
            "flexDirection": "row",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          foo
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`ProgressBar (with progress) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#2f3241",
      "flex": 1,
      "padding": 5,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#02ffff",
        "borderRadius": 2,
        "flex": 1,
        "padding": 2,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#2f3241",
          "borderRadius": 2,
          "flex": 1,
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgba(2, 255, 255, 1)",
            "borderRadius": 2,
            "flex": 1,
            "height": "100%",
            "position": "absolute",
            "width": "50%",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "elevation": 6,
            "flexDirection": "row",
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;
